--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "eslint-config-custom": "*",
+    "tailwind-config": "*",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
